2010-07-09  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayerQt must have syncCompositingStateForThisLayerOnly() implemented
        https://bugs.webkit.org/show_bug.cgi?id=41954

        Add GraphicsLayerQt::syncCompositingStateForThisLayerOnly, a non-recursive
        implementation of GraphicsLayerQt::syncCompositingState and which targets
        the current layer only.

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::GraphicsLayerQt::syncCompositingStateForThisLayerOnly):
        * platform/graphics/qt/GraphicsLayerQt.h:

Canonical link: https://commits.webkit.org/53884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63001 268f45cc-cd09-0410-ab3c-d52691b4dbfc