WebCore/platform/graphics/qt/GraphicsLayerQt.cpp
@@ -1187,6 +1187,15 @@ void GraphicsLayerQt::syncCompositingState()
 }
 
 /* \reimp (GraphicsLayer.h)
+*/
+void GraphicsLayerQt::syncCompositingStateForThisLayerOnly()
+{
+    // We can't call flushChanges recursively here
+    m_impl->flushChanges(false);
+    GraphicsLayer::syncCompositingStateForThisLayerOnly();
+}
+
+/* \reimp (GraphicsLayer.h)
  */
 NativeLayer GraphicsLayerQt::nativeLayer() const
 {
